--- a/tools/cli/ModelEight/CMakeLists.txt
+++ b/tools/cli/ModelEight/CMakeLists.txt
@@ -1,31 +1,13 @@
 cmake_minimum_required(VERSION 3.17)
-include(FetchContent)
 
 project(transmission_networks_model_eight)
-
-#FetchContent_Declare(json
-#        GIT_REPOSITORY https://github.com/nlohmann/json.git
-#        GIT_TAG master
-#        GIT_SHALLOW TRUE
-#        GIT_PROGRESS TRUE)
-#FetchContent_MakeAvailable(json)
-#
-#FetchContent_Declare(
-#        Eigen
-#        GIT_REPOSITORY https://gitlab.com/libeigen/eigen.git
-#        GIT_TAG master
-#        GIT_SHALLOW TRUE
-#        GIT_PROGRESS TRUE)
-#set(EIGEN_BUILD_DOC OFF)
-#set(BUILD_TESTING OFF)
-#set(EIGEN_BUILD_PKGCONFIG OFF)
-#FetchContent_MakeAvailable(Eigen)
 
 
 find_package(Boost)
 find_package(Eigen3)
 find_package(nlohmann_json)
 find_package(OpenMP)
+find_package(fmt)
 
 if (OPENMP_FOUND)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
@@ -33,20 +15,18 @@ if (OPENMP_FOUND)
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif ()
 
-#include_directories(SYSTEM ${Boost_INCLUDE_DIR})
-
 include_directories(${TRANSMISSION_NETWORK_HEADERS_DIR})
 
 set(SOURCE_FILES ModelEight.cpp)
 add_executable(transmission_networks_model_eight ${SOURCE_FILES})
 target_link_libraries(transmission_networks_model_eight
-
         PRIVATE
         transmission_networks
         nlohmann_json::nlohmann_json
         Eigen3::Eigen
         OpenMP::OpenMP_CXX
         ${Boost_LIBRARIES}
+        fmt::fmt
         )
 
 message(STATUS ${TRANSMISSION_NETWORKS_INSTALL_BIN_DIR})
