--- a/src/model/CMakeLists.txt
+++ b/src/model/CMakeLists.txt
@@ -2,9 +2,10 @@ cmake_minimum_required(VERSION 3.15)
 project(transmission_network_model)
 
 
-set(SOURCE_FILES
+set(
+        SOURCE_FILES
         observation_process/AlleleCounts.cpp
-        )
+)
 
 add_library(transmission_network_model SHARED STATIC ${SOURCE_FILES})
 set_target_properties(transmission_network_model PROPERTIES LINKER_LANGUAGE CXX)
