Fix build errors for ARM64 and C++20 compatibility
- Make compiler warning flag conditional (GCC-only for -Wno-maybe-uninitialized)
- Add Boost dependency to test target to fix missing boost/container/flat_map.hpp
- Conditionally include x86/x64 intrinsics (immintrin.h) only on supported architectures
- Add fallback for std::execution::unseq when not available in standard library
- Add missing #include <sstream> in utils.cpp
- Fix template keyword syntax in SimpleLoss.h (remove unnecessary template keyword)
- Make OpenMP header inclusion conditional
- Fix JSON comparison by converting nlohmann::json to std::string

All build errors resolved. Project now builds successfully on ARM64 (Apple Silicon).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,8 +35,12 @@ add_compile_options(
     -Wextra
     -Wno-unused-function
     -Wno-unused-parameter
-    -Wno-maybe-uninitialized
 )
+
+# -Wno-maybe-uninitialized is GCC-specific, use conditionally
+if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
+    add_compile_options(-Wno-maybe-uninitialized)
+endif()
 
 if(TRANSMISSION_NETWORKS_WERROR)
     add_compile_options(-Werror)
